--- a/templates/todo_list_update.html
+++ b/templates/todo_list_update.html
@@ -45,7 +45,7 @@
     {% for form in item_form %}
     <div class="item">
         <p>{{form.id}}</p>
-        <p class="delete_mark" style="display:none">{{form.DELETE}}</p>
+        <p class="delete_mark" style="display:block">{{form.DELETE}}</p>
         <p>{{form.name.label_tag}}</p>
         <p>{{form.name}}</p>
         <p>{{form.name.errors}}</p>
@@ -79,9 +79,36 @@ $(document).ready(function () {
     }
 
     function deleteForm(btn, prefix) {
+      if($("[id$='-id']",$(btn).parent().parent()).val()!="")//update the existing record
+      {
         $(".delete_mark",$(btn).parent().parent()).children().attr("checked","checked")
-        $(btn).parents('.item').hide();
+        //$(btn).parents('.item').hide();
         return false;
+      }else//newly added record
+      {
+            var formCount = parseInt($('#id_' + prefix + '-TOTAL_FORMS').val());
+            if (formCount > 1) {
+                // Delete the item/form
+                $(btn).parents('.item').remove();
+                var forms = $('.item'); // Get all the forms
+                // Update the total number of forms (1 less than before)
+                $('#id_' + prefix + '-TOTAL_FORMS').val(forms.length);
+                var i = 0;
+                // Go through the forms and set their indices, names and IDs
+                for (formCount = forms.length; i < formCount; i++) {
+                    $(forms.get(i)).children().children().each(function () {
+                        if ($(this).get(0).tagName == 'INPUT' ) updateElementIndex(this, prefix, i);
+                    });
+                }
+            } // End if
+            else {
+                alert("You have to enter at least one todo item!");
+            }
+            return false;
+
+      }
+
+
     }
 
     function addForm(btn, prefix) {
